# opshin-pioneer-program

./: .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: merge-main-solutions.yaml  test-solutions.yaml  test.yaml
code/week02/homework/: homework1.py  homework2.py
code/week02/lecture/: burn.py  fourty_two.py  fourty_two_typed.py  gift.py
config/: download-configs.sh
scripts/: alias_cardano_cli.sh  create_key_pair.py  query-address.sh  query-tip.sh  query_address.sh  query_tip.sh
src/utils/: __init__.py  distribute.py  keys.py  mock.py  mock_scripts.py  network.py  paths.py  protocol_params.py  to_script_context.py  tx_tools.py
src/week01/notes/: part01.md  part02.md  part03.md  part04.md  part05.md  part06.md
src/week01/scripts/: check_setup.py  send.py
src/week02/: __init__.py
src/week02/assets/: unit.json
src/week02/homework/: homework1.py  homework1_solved.py  homework2.py  homework2_solved.py
src/week02/lecture/: burn.py  custom_types.py  fourty_two.py  fourty_two_typed.py  gift.py
src/week02/notes/: part01.md  part02.md  part03.md  part04.md  part05.md
src/week02/scripts/: build.py  build.sh  collect_gift.py  collect_gift.sh  make-gift.sh  make_gift.py  make_gift.sh  send.py
src/week02/tests/: test_homework.py  test_lecture.py  test_scripts.py
src/week03/homework/: homework1.py  homework1_solved.py  homework2.py  homework2_solved.py
src/week03/lecture/: interval.py  parameterized_vesting.py  range.py  vesting.py
src/week03/lucid/: package-lock.json  package.json  webpack.config.js
src/week03/notes/: part01.md  part02.md  part03.md  part04.md  part05.md  part06.md  part07.md  part08.md
src/week03/scripts/: build.py  collect_vest.py  collect_vest_ref.py  make_vest.py  submit_ref_scripts.py
src/week03/tests/: test_homework.py  test_interval.py  test_lecture.py  test_scripts.py
src/week04/homework/: homework1.py  homework2.py
src/week04/notes/: part01.md  part02.md  part05.md
src/week08/: __init__.py
src/week09/: __init__.py
(+74 files in other folders)
