[tool.poetry]
name = "opshin-pioneer-program"
version = "0.1.0"
description = ""
authors = ["Julius Frost <33183774+juliusfrost@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
opshin = "^0.14.3"
pycardano = "^0.9.0"
click = "^8.1.5"
pyaiken = {version = "^0.5.1", optional = true}
uplc = "^0.6.7"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
hypothesis = "^6.86.1"
pytest-xdist = "^3.3.1"
pytest-mock = "^3.11.1"

[tool.poetry.extras]
pyaiken = ["pyaiken"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
